--- a/style.css
+++ b/style.css
@@ -126,9 +126,34 @@ body {
 /* Active Photo */
 .active-photo {
     position: fixed;
-    width: calc(100vw - 20px);
-    height: calc(100vh - 20px);
     background: rgba(255, 255, 255, 0.6);
-    top: 10px;
-    left: 10px;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: 10px 0 5px;
 }
+
+    .active-photo__heading-container {
+        height: 50px;
+    }
+
+        .active-photo__heading-container__close {
+            font-size: 2.5em;
+            -webkit-transition: 0.6s ease;
+            transition: 0.6s ease;
+            display: inline-block;
+            line-height: normal;
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            border: 2px solid;
+            color: #fff;
+            background: #333;
+            padding: 1px 0;
+        }
+
+            .active-photo__heading-container__close:hover {
+                background: #fff;
+                color: #333;
+                cursor: pointer;
+            }
