--- a/style.css
+++ b/style.css
@@ -131,6 +131,7 @@ body {
     left: 0;
     right: 0;
     padding: 10px 0 5px;
+    overflow: scroll;
 }
 
     .active-photo__heading-container {
@@ -157,3 +158,9 @@ body {
                 color: #333;
                 cursor: pointer;
             }
+
+    .active-photo__img-container {
+        padding-top: 10px;
+        height: calc(100vh - 60px);
+        overflow: scroll;
+    }
